--- a/scud/index.html
+++ b/scud/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>scud</title>
+    <title>岭南飞毛腿</title>
   </head>
   <body>
     <div id="app"></div>
